# construction-project

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  hello_ifc.py  mkdocs.yml  pyproject.toml  requirements.txt
api/: app.py
docs/: changelog.md  index.md
docs/architecture/: agent-pipeline.md  ai-transparency.md  overview.md
docs/deployment/: docker.md  local-development.md  production.md
docs/getting-started/: configuration.md  installation.md  quick-start.md
docs/legal/: accuracy-disclaimer.md  data-handling.md
docs/reference/: api-endpoints.md  element-rules.md  glossary.md  ifc-compatibility.md  waste-factors.md
docs/troubleshooting/: common-errors.md  faq.md
docs/user-guide/: accuracy-and-limitations.md  understanding-boq.md  uploading-ifc.md
scripts/: create_sample_ifc.py  download_real_world_ifc.py  generate_test_fixtures.py
src/: __init__.py  config.py  main.py
src/agents/: base_agent.py  boq_generator.py  calculator.py  classifier.py  ifc_parser.py  material_mapper.py  orchestrator.py  validator.py
src/data/: element_rules.json  waste_factors.json
src/models/: ai_responses.py  boq.py  confidence.py  materials.py  project.py  quantities.py
src/prompts/: __init__.py  classifier_prompts.py  (+2 more)
tests/: test_ai_agents.py  test_api.py  test_benchmark.py  test_boq_export.py  test_calculator.py  test_classifier.py  test_database.py  test_geometry_service.py  test_ifc_parser.py  test_learning_service.py  test_llm_service.py  test_material_mapper.py  test_pipeline.py  test_validator.py
(+27 files in other folders)
